[package]
name = "pbrk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
reqwest = { version = "0.11.6", features = ["socks"] }
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }

